--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,3 +1,5 @@
+@import "./colors.scss";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,7 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   
-  background: #282828;
+  background: $g-bg2;
 }
 
 code {
