--- a/src/components/appinfo/app-list/AppList.scss
+++ b/src/components/appinfo/app-list/AppList.scss
@@ -7,16 +7,17 @@ $htransT: 0.25s;
 
 .AppList {
     text-align: center;
+    padding: 20px 10px;
 }
 
 .PageSelector {
-    $color: $g-fg;
+    $color: $g-fg2;
     height: $pbsz+2*$pbmar;
     
     background: $g-bg;
-    color: $g-fg;
+    color: $color;
     border: 1px solid $g-shadow;
-    border-width: 0px 1px 1px 0px;
+    //border-width: 0px 1px 1px 0px;
     box-shadow: $g-shadow 4px 4px;
     
     width: fit-content;
