Improve AppElt/StatusRow colors.

--- a/src/components/appinfo/app-list/element/AppElt.scss
+++ b/src/components/appinfo/app-list/element/AppElt.scss
@@ -36,16 +36,18 @@ $htransT: 0.25s;
     .-StatusRow {
         --status-color: #{$g-status-other};
         --status-color-bg: #{$g-status-other-bg};
+        --status-color-fg: #{$g-status-other-fg};
         border: 0px solid var(--status-color);
+        color: var(--status-color-fg);
         padding: 5px;
         text-align: center;
         border-width: 0px 15px;
         background: var(--status-color-bg);
-        &.-c-good { --status-color: #{$g-status-good}; --status-color-bg: #{$g-status-good-bg}; }
-        &.-c-bad { --status-color: #{$g-status-bad}; --status-color-bg: #{$g-status-bad-bg}; }
-        &.-c-med { --status-color: #{$g-status-med}; --status-color-bg: #{$g-status-med-bg}; }
-        &.-c-instructor { --status-color: #{$g-status-instructor}; --status-color-bg: #{$g-status-instructor-bg}; }
-        &.-c-pending { --status-color: #{$g-status-pending}; --status-color-bg: #{$g-status-pending-bg}; }
+        &.-c-good { --status-color: #{$g-status-good}; --status-color-bg: #{$g-status-good-bg}; --status-color-fg: #{$g-status-good-fg}; }
+        &.-c-bad { --status-color: #{$g-status-bad}; --status-color-bg: #{$g-status-bad-bg}; --status-color-fg: #{$g-status-bad-fg}; }
+        &.-c-med { --status-color: #{$g-status-med}; --status-color-bg: #{$g-status-med-bg}; --status-color-fg: #{$g-status-med-fg}; }
+        &.-c-instructor { --status-color: #{$g-status-instructor}; --status-color-bg: #{$g-status-instructor-bg}; --status-color-fg: #{$g-status-instructor-fg}; }
+        &.-c-pending { --status-color: #{$g-status-pending}; --status-color-bg: #{$g-status-pending-bg}; --status-color-fg: #{$g-status-pending-fg}; }
     }
     .-ButtonRow + .-ButtonRow {
         margin-left: 0px;
