--- a/src/components/colors.scss
+++ b/src/components/colors.scss
@@ -10,16 +10,22 @@ $g-btn-fg: var(--g-btn-fg);
 
 $g-status-good: var(--g-status-good);
 $g-status-good-bg: var(--g-status-good-bg);
+$g-status-good-fg: var(--g-status-good-fg);
 $g-status-med: var(--g-status-med);
 $g-status-med-bg: var(--g-status-med-bg);
+$g-status-med-fg: var(--g-status-med-fg);
 $g-status-bad: var(--g-status-bad);
 $g-status-bad-bg: var(--g-status-bad-bg);
+$g-status-bad-fg: var(--g-status-bad-fg);
 $g-status-pending: var(--g-status-pending);
 $g-status-pending-bg: var(--g-status-pending-bg);
+$g-status-pending-fg: var(--g-status-pending-fg);
 $g-status-instructor: var(--g-status-instructor);
 $g-status-instructor-bg: var(--g-status-instructor-bg);
+$g-status-instructor-fg: var(--g-status-instructor-fg);
 $g-status-other: var(--g-status-other);
 $g-status-other-bg: var(--g-status-other-bg);
+$g-status-other-fg: var(--g-status-other-fg);
 
 @media (prefers-color-scheme: dark) {
     :root {
@@ -33,18 +39,39 @@ $g-status-other-bg: var(--g-status-other-bg);
         --g-btn-bg: #2b2b2b;
         --g-btn-fg: #ffffff;
 
-        --g-status-good: #37de81;
-        --g-status-good-bg: #254630;
-        --g-status-med: #ffff00;
-        --g-status-med-bg: #4c531f;
-        --g-status-bad: #ff0000;
-        --g-status-bad-bg: #562222;
-        --g-status-pending: #3737e2;
-        --g-status-pending-bg: #2e336d;
-        --g-status-instructor: #7034b5;
-        --g-status-instructor-bg: #442450;
-        --g-status-other: #777777;
-        --g-status-other-bg: #3d3d3d;
+        $s-good: #37de81;
+        $s-good-bg: #254630;
+        $s-med: #ffff00;
+        $s-med-bg: #4c531f;
+        $s-bad: #ff0000;
+        $s-bad-bg: #562222;
+        $s-pending: #3737e2;
+        $s-pending-bg: #2e336d;
+        $s-instructor: #7034b5;
+        $s-instructor-bg: #442450;
+        $s-other: #777777;
+        $s-other-bg: #3d3d3d;
+
+        --g-status-good: #{$s-good};
+        --g-status-good-bg: #{$s-good-bg};
+        --g-status-med: #{$s-med};
+        --g-status-med-bg: #{$s-med-bg};
+        --g-status-bad: #{$s-bad};
+        --g-status-bad-bg: #{$s-bad-bg};
+        --g-status-pending: #{$s-pending};
+        --g-status-pending-bg: #{$s-pending-bg};
+        --g-status-instructor: #{$s-instructor};
+        --g-status-instructor-bg: #{$s-instructor-bg};
+        --g-status-other: #{$s-other};
+        --g-status-other-bg: #{$s-other-bg};
+
+        $lAmt: 40%;
+        --g-status-good-fg: #{lighten($s-good,$lAmt)};
+        --g-status-med-fg: #{lighten($s-med,$lAmt)};
+        --g-status-bad-fg: #{lighten($s-bad,$lAmt)};
+        --g-status-pending-fg: #{lighten($s-pending,$lAmt)};
+        --g-status-instructor-fg: #{lighten($s-instructor,$lAmt)};
+        --g-status-other-fg: #{lighten($s-other,$lAmt)};
     }
 }
 
@@ -60,17 +87,39 @@ $g-status-other-bg: var(--g-status-other-bg);
         --g-btn-bg: #f5f5f5;
         --g-btn-fg: #565656;
 
-        --g-status-good: #77f397;
-        --g-status-good-bg: #eefff2;
-        --g-status-med: #ffff15;
-        --g-status-med-bg: #faffdb;
-        --g-status-bad: #ff7027;
-        --g-status-bad-bg: #ffebeb;
-        --g-status-pending: #5998f3;
-        --g-status-pending-bg: #f0f9ff;
-        --g-status-instructor: #9e75f7;
-        --g-status-instructor-bg: #efe5ff;
-        --g-status-other: #eae9e9;
-        --g-status-other-bg: #f9f9f9;
+
+        $s-good: #77f397;
+        $s-good-bg: #eefff2;
+        $s-med: #ffff15;
+        $s-med-bg: #faffdb;
+        $s-bad: #ff7027;
+        $s-bad-bg: #ffebeb;
+        $s-pending: #5998f3;
+        $s-pending-bg: #f0f9ff;
+        $s-instructor: #9e75f7;
+        $s-instructor-bg: #efe5ff;
+        $s-other: #eae9e9;
+        $s-other-bg: #f9f9f9;
+
+        --g-status-good: #{$s-good};
+        --g-status-good-bg: #{$s-good-bg};
+        --g-status-med: #{$s-med};
+        --g-status-med-bg: #{$s-med-bg};
+        --g-status-bad: #{$s-bad};
+        --g-status-bad-bg: #{$s-bad-bg};
+        --g-status-pending: #{$s-pending};
+        --g-status-pending-bg: #{$s-pending-bg};
+        --g-status-instructor: #{$s-instructor};
+        --g-status-instructor-bg: #{$s-instructor-bg};
+        --g-status-other: #{$s-other};
+        --g-status-other-bg: #{$s-other-bg};
+        
+        $dAmt: 30%;
+        --g-status-good-fg: #{darken($s-good,$dAmt*1.5)};
+        --g-status-med-fg: #{darken($s-med,$dAmt)};
+        --g-status-bad-fg: #{darken($s-bad,$dAmt)};
+        --g-status-pending-fg: #{darken($s-pending,$dAmt)};
+        --g-status-instructor-fg: #{darken($s-instructor,$dAmt)};
+        --g-status-other-fg: #{darken($s-other,$dAmt)};
     }
 }
