--- a/src/components/colors.scss
+++ b/src/components/colors.scss
@@ -82,7 +82,7 @@ $g-status-other-fg: var(--g-status-other-fg);
         --g-bg2: #ffffff;
         --g-fg2: #606060;
 
-        --g-shadow: #dadada;
+        --g-shadow: #efefef;
 
         --g-btn-bg: #f5f5f5;
         --g-btn-fg: #565656;
