--- a/src/components/appinfo/app-list/AppList.scss
+++ b/src/components/appinfo/app-list/AppList.scss
@@ -1,4 +1,5 @@
 @import "../../colors.scss";
+@import "../../FloatingBox.scss";
 
 $pbsz: 30px;
 $pbmar: 5px;
@@ -16,9 +17,8 @@ $htransT: 0.25s;
     
     background: $g-bg;
     color: $color;
-    border: 1px solid $g-shadow;
-    //border-width: 0px 1px 1px 0px;
-    box-shadow: $g-shadow 4px 4px;
+
+    @include FloatingBox(false);
     
     width: fit-content;
     display: inline-block;
