--- a/src/components/page/main/search-bar/SearchBar.scss
+++ b/src/components/page/main/search-bar/SearchBar.scss
@@ -8,6 +8,8 @@ $i-color: $g-fg;
 .SearchBar {
     @include FloatingBox();
 
+    background: $g-bg;
+
     margin: 20px;
     font-size: 0.95em;
     text-align: start;
