--- a/src/components/page/settings/Settings.scss
+++ b/src/components/page/settings/Settings.scss
@@ -1,7 +1,6 @@
 @import "../../FloatingBox.scss";
 @import "../../colors.scss";
-
-$htransT: 0.25s;
+@import "../../interactables.scss";
 
 .SettingsPage {
     > h1 {
@@ -42,29 +41,14 @@ $htransT: 0.25s;
                 flex: 1 1;
                 margin: 0px 3px;
                 font: inherit;
-                transition: color $htransT, background-color $htransT, border $htransT;
                 height: $h;
                 line-height: $h;
             }
             input {
-                border: 1px solid $g-fg;
-                background: $g-bg;
-                color: $g-fg;
-                border-radius: 2px;
-                &:hover {
-                    background: $g-ms-bg-hov;
-                }
+                @include input();
             }
             button, a {
-                text-align: center;
-                border: none;
-                text-decoration: none;
-                background: $g-btn-bg;
-                color: $g-btn-fg;
-                &:hover {
-                    background: $g-btn-fg;
-                    color: $g-btn-bg;
-                }
+                @include button();
             }
         }
     }
