Remake admin page with new login system in mind

--- a/src/components/error-display/ErrorDisplay.scss
+++ b/src/components/error-display/ErrorDisplay.scss
@@ -28,6 +28,7 @@ $ed-anim-t: 300ms;
     h1 {
         color: $g-fg2;
         text-align: center;
+        margin: 1em 0.5em;
     }
     p {
         color: $g-fg;
