--- a/src/components/appinfo/app-list/element/AppElt.scss
+++ b/src/components/appinfo/app-list/element/AppElt.scss
@@ -20,6 +20,7 @@
         > span {
             padding: 0px 5px;
             background: var(--status-color-bg);
+            line-break: anywhere;
         }
     }
     .-buttons {
