--- a/src/components/page/export-page/ExportPage.scss
+++ b/src/components/page/export-page/ExportPage.scss
@@ -20,6 +20,12 @@
         height: 50px;
         width: 150px;
     }
+    .-upload {
+        display: block;
+        width: calc(300px + 1em);
+        margin-inline-start: calc(50% - 150px - .5em);
+        margin-top: 1em;
+    }
     .-backBtn {
         display: inline-block;
         padding: .3em;
